--- a/soft_robot/config/tensegrity_4.yaml
+++ b/soft_robot/config/tensegrity_4.yaml
@@ -15,7 +15,7 @@ train:
     dataset: 'tensegrity'
     input_size: 30
     data_path: './dataset/processed_data/train_dataset_4.pkl'
-    batch_size: 128
+    batch_size: 64
     num_epochs: 50
     learning_rate: 1e-4
     weight_decay: 1e-2
@@ -32,7 +32,7 @@ test:
     model_name: 'tensegrity_33'
     data_path: './dataset/processed_data/test_dataset_4.pkl'
     input_size: 30
-    checkpoint_path: './experiments/model.pth'
+    checkpoint_path: './experiments/tensegrity_4/model-100000'
     dataset: 'tensegrity'
 optim:
     optim: 'adamw'
