--- a/soft_robot/config/smartwatch_1.yaml
+++ b/soft_robot/config/smartwatch_1.yaml
@@ -1,39 +1,32 @@
 mode:
   mode: 'train'
   multiprocessing_distributed: False
-  dist_url: tcp://127.0.0.1:2345
   num_threads: 1
   do_online_eval: True
-  parameter_path: './dataset/processed_data/parameter_4.pkl'
 train:
   dim_x: 9
   dim_z: 9
-  dim_a: 40
+  input_size: 25
   num_ensemble: 32
   seed: 0
   model_name: 'smartwatch_1'
-  dataset: 'tensegrity'
-  input_size: 25
   data_path: '/home/fabian/Documents/code/PredictiveBiomechanics/merge_data/data_deploy/kalman_data/train_D_HAND_KALMAN_T'
   batch_size: 64
   num_epochs: 50
   learning_rate: 1e-4
   weight_decay: 1e-2
   adam_eps: 1e-3
-  log_freq: 100
-  eval_freq: 10000
-  log_directory: './experiments/smartwatch'
-  loss: 'mse'
+  log_freq: 500
+  eval_freq: 2000
+  save_freq: 2000
+  log_directory: '/home/fabian/Documents/nns/kalman/'
 test:
   dim_x: 9
   dim_z: 9
-  dim_a: 40
+  input_size: 25
   num_ensemble: 32
-  model_name: 'tensegrity_33'
+  model_name: 'smartwatch_1'
   data_path: '/home/fabian/Documents/code/PredictiveBiomechanics/merge_data/data_deploy/kalman_data/test_D_HAND_KALMAN_T'
-  input_size: 30
-  checkpoint_path: './experiments/smartwatch/model-00001'
-  dataset: 'tensegrity'
 optim:
   optim: 'adamw'
   lr_scheduler: 'polynomial_decay'
